spacing issue solve

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -142,7 +142,13 @@ nav.sticky {
     background: rgba(255, 255, 255, 0.9);
     position: fixed;
     transition: 0.3s;
-    box-shadow: 0 10px 6px -6px #777;
+    box-shadow:
+            0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+            0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+            0 12.5px 10px rgba(0, 0, 0, 0.06),
+            0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+            0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+            0 100px 80px rgba(0, 0, 0, 0.12);
 }
 
 .sticky a.logo {
@@ -339,6 +345,10 @@ nav.sticky {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.trust-section-single-box {
+    margin: 10px 0;
 }
 
 /*********************************/
